language/move-lang/tests/move_check/borrows/dereference_combo_invalid.exp
error: 

    ┌── tests/move_check/borrows/dereference_combo_invalid.move:13:9 ───
    │
 13 │         *s;
    │         ^^ Invalid dereference.
    ·
 12 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/dereference_combo_invalid.move:20:9 ───
    │
 20 │         *s;
    │         ^^ Invalid dereference.
    ·
 19 │         if (cond) f = &mut s.f else f = &mut s.g;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    ·
 19 │         if (cond) f = &mut s.f else f = &mut s.g;
    │                                         -------- Field 'g' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/dereference_combo_invalid.move:27:9 ───
    │
 27 │         *s;
    │         ^^ Invalid dereference.
    ·
 26 │         if (cond) x = copy s else x = other;
    │                       ------ It is still being mutably borrowed by this reference
    │

